force-app/main/default/objects/FscBot_Verification_Code__c/FscBot_Verification_Code__c.object-meta.xml
<CustomObject>
    <label>Verification Code</label>
    <nameField>
        <displayFormat>VCO-{0000000}</displayFormat>
        <label>Verification Code Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>