force-app/main/default/objects/FscBot_Verification_Code__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verification Codes</relationshipLabel>
    <relationshipName>Verification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>