force-app/main/default/objects/FscBot_Verification_Code__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <label>Expires On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>