force-app/main/default/objects/FscBot_Verification_Code__c/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <label>Verification Method</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>